logo and user class added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="hero">
         <nav>
-            <img src="images/f.svg" class="logo" alt="">
+            <img src="images/logo.png" class="logo" alt="">
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Features</a></li>
